# service/src/main/java/at/uni/innsbruck/htibot/core/model/enums/ConversationLanguage.java
@@ -1,5 +1,0 @@
-package at.uni.innsbruck.htibot.core.model.enums;
-
-public enum ConversationLanguage {
-  GERMAN, ENGLISH, FRENCH, ITALIAN
-}
