# service/src/main/java/at/uni/innsbruck/htibot/rest/generated/model/RateConversation200Response.java
@@ -19,7 +19,6 @@ import com.fasterxml.jackson.annotation.JsonTypeName;
 @jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJAXRSSpecServerCodegen")
 public class RateConversation200Response   {
   private @Valid Integer resultCode;
-  private @Valid String incidentReport;
 
   /**
    * The result code
@@ -41,26 +40,6 @@ public class RateConversation200Response   {
     this.resultCode = resultCode;
   }
 
-  /**
-   * If the user has closed the conversation, an incident report on the conversation is generated.
-   **/
-  public RateConversation200Response incidentReport(String incidentReport) {
-    this.incidentReport = incidentReport;
-    return this;
-  }
-
-  
-  @ApiModelProperty(value = "If the user has closed the conversation, an incident report on the conversation is generated.")
-  @JsonProperty("incidentReport")
-  public String getIncidentReport() {
-    return incidentReport;
-  }
-
-  @JsonProperty("incidentReport")
-  public void setIncidentReport(String incidentReport) {
-    this.incidentReport = incidentReport;
-  }
-
 
   @Override
   public boolean equals(Object o) {
@@ -71,13 +50,12 @@ public class RateConversation200Response   {
       return false;
     }
     RateConversation200Response rateConversation200Response = (RateConversation200Response) o;
-    return Objects.equals(this.resultCode, rateConversation200Response.resultCode) &&
-        Objects.equals(this.incidentReport, rateConversation200Response.incidentReport);
+    return Objects.equals(this.resultCode, rateConversation200Response.resultCode);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(resultCode, incidentReport);
+    return Objects.hash(resultCode);
   }
 
   @Override
@@ -86,7 +64,6 @@ public class RateConversation200Response   {
     sb.append("class RateConversation200Response {\n");
     
     sb.append("    resultCode: ").append(toIndentedString(resultCode)).append("\n");
-    sb.append("    incidentReport: ").append(toIndentedString(incidentReport)).append("\n");
     sb.append("}");
     return sb.toString();
   }
