# service/src/main/resources/openapi/htibotbackendopenapi.yml
@@ -87,9 +87,6 @@ paths:
                     type: integer
                     format: int32
                     example: 200
-                  incidentReport:
-                    type: string
-                    description: If the user has closed the conversation, an incident report on the conversation is generated.
         '401':
           description: Unauthorized
         '404':
@@ -158,12 +155,6 @@ paths:
           schema:
             type: string
             example: 123abc
-        - name: language
-          in: query
-          description: The language for the operation.
-          required: true
-          schema:
-            $ref: '#/components/schemas/LanguageEnum'
       responses:
         '200':
           description: "OK"
@@ -196,15 +187,6 @@ paths:
           $ref: "#/components/responses/Error"
 components:
   schemas:
-    LanguageEnum:
-      type: string
-      enum:
-        - English
-        - French
-        - Italian
-        - German
-      description: Enumeration of supported languages
-      default: English
     BaseErrorModel:
       type: object
       properties:
